--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb+srv://user-blog-escola:p59fcaY82moMxrgS@blog-escola.ku8gx6v.mongodb.net/blog-escola
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=OdlCuDkCk/9hbQg+Z4xOnWUbq5DlnRNslKRTZTHRIG8=
