--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
